advocatehealth.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;health",
  "char_count": 3542,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.87,
  "homepage_snapshot_redirected_domain": "advocatehealth.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020327024911id_/http://www.advocatehealth.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020327024911id_/http%3A//advocatehealth.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "advocatehealth.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604054738id_/http%3A//www.advocatehealth.com/system/privacy.html",
  "policy_title": "",
  "policy_url": "advocatehealth.com/system/privacy.html",
  "sha1": "f65266a02f17e8d8ce016e775f3c8028e0fc865d",
  "simhash": 17274067290417651968,
  "simhash_updated": false,
  "site_hostname": "advocatehealth.com",
  "site_url": "http://advocatehealth.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020604054738",
  "word_count": 582,
  "year": 2002
}

--- a/a/ad/adv/advocatehealth.com.html
+++ b/a/ad/adv/advocatehealth.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the advocatehealth.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217003448id_/http%3A//advocatehealth.com/system/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the advocatehealth.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604054738id_/http%3A//www.advocatehealth.com/system/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- 
   Developed by Imaginary Landscape (http://www.imaginarylandscape.com)
@@ -402,7 +402,7 @@ Please send your comments via e-mail comments to our Web Manager at
 <p>Use of our site constitutes acceptance of our <a href="/system/terms.html">Terms of
 Use</a>. Advocate Health Care respects your privacy. We invite you to view our <a href="/system/privacy.html">Privacy Policy</a>.</p>
 
-<p>Copyright © 2001 Advocate Health Care, Oak Brook, Illinois, USA</p>
+<p>Copyright © 2002 Advocate Health Care, Oak Brook, Illinois, USA</p>
 </font>
 </div>
 
