--- a/s/sw/sw./sw.org.html
+++ b/s/sw/sw./sw.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sw.org privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205071836id_/http%3A//sw.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sw.org privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604060805id_/http%3A//www.sw.org/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML//EN//3.2"><html><head>
 
@@ -74,7 +74,7 @@ We can be reached via e-mail at <a href="mailto:webmaster@mailbox.sw.org">webmas
 <br>
 <hr width="80%" align="center">
 <br></font></td></tr></tbody></table>
-<address><font size="-1">Copyright © 1998-2001 by Scott &amp; White.<br> All rights reserved.</font></address>
+<address><font size="-1">Copyright © 2002 by Scott &amp; White.<br> All rights reserved.</font></address>
 </td></tr></tbody></table></center>
 
 
