--- a/c/cr/cro/crossdaily.com.html
+++ b/c/cr/cro/crossdaily.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the crossdaily.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204001153id_/http%3A//info.crossdaily.com/privacy.php3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the crossdaily.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604062040id_/http%3A//info.crossdaily.com/privacy.php3) for the most accurate reproduction.-->
 
 <html><head>
 <title>CrossDaily.com - Privacy Policy</title></head>
@@ -10,9 +10,9 @@
 <td width="100%" align="center">
 
 <center>
-<a href="http://www.christianclick.com/ads/redirect.phtml?hid=29&amp;pid=138582" target="New">
-<img src="http://www.christianclick.com/ads/rotate.phtml?hid=29&amp;pid=138582" border="1" alt="Click Here to Visit Our Sponsors" height="60" width="468"></a><br></center>
-Sponsors:  <a href="http://www.christianclick.com/ads/redirect.phtml?bid=312&amp;cid=168&amp;hid=46&amp;pid=1" target="New">Free Book</a> | <a href="http://www.christianclick.com/ads/redirect.phtml?bid=330&amp;cid=167&amp;hid=46&amp;pid=1" target="New">Save Children</a> | <a href="http://www.christianclick.com/ads/redirect.phtml?bid=314&amp;cid=169&amp;hid=46&amp;pid=1" target="New">Pocket PC Bible</a> | <a href="http://www.christianclick.com/ads/redirect.phtml?bid=313&amp;cid=160&amp;hid=46&amp;pid=1" target="New">Web Hosting</a> | <a href="http://www.christianclick.com/ads/redirect.phtml?bid=316&amp;cid=170&amp;hid=46&amp;pid=1" target="New">Free Ebook</a></td></tr>
+<a href="http://www.christianclick.com/ads/redirect.phtml?hid=29&amp;pid=16882" target="New">
+<img src="http://www.christianclick.com/ads/rotate.phtml?hid=29&amp;pid=16882" border="1" alt="Click Here to Visit Our Sponsors" height="60" width="468"></a><br></center>
+Sponsors:  <a href="http://www.christianclick.com/ads/redirect.phtml?bid=404&amp;cid=201&amp;hid=46&amp;pid=1" target="New">A FREE Christian Book</a> | <a href="http://www.christianclick.com/ads/redirect.phtml?bid=313&amp;cid=204&amp;hid=46&amp;pid=1" target="New">Web Hosting</a> | <a href="http://www.christianclick.com/ads/redirect.phtml?bid=316&amp;cid=215&amp;hid=46&amp;pid=1" target="New">Free Ebook</a></td></tr>
 </tbody></table>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tbody><tr>
@@ -24,19 +24,18 @@ Sponsors:  <a href="http://www.christianclick.com/ads/redirect.phtml?bid=312&amp
 <font size="-1">
 <a href="http://membership.crossdaily.com"><b>Become a Member</b></a><br>
 <a href="http://friendship.crossdaily.com"><b>Christian Friendship</b></a><br>
-<a href="http://cards.crossdaily.com"><b>Free Greeting E-cards</b></a><br>
-<a href="http://inspirations.crossdaily.com"><b>Inspirations</b></a><br>
+<a href="http://graphics.crossdaily.com"><b>Graphics</b></a> <font color="#FF0000">New</font><br>
+&nbsp;<a href="http://clipart.crossdaily.com">Clipart</a><br>
+&nbsp;<a href="http://photography.crossdaily.com">Photography</a><br>
+&nbsp;<a href="http://wallpaper.crossdaily.com">Wallpaper</a><br>
+&nbsp;<a href="http://cartoons.crossdaily.com">Cartoons</a><br>
+&nbsp;<a href="http://photos.crossdaily.com">Friend Photos</a><br>
 <a href="http://games.crossdaily.com"><b>Games</b></a><br>
 &nbsp;<a href="http://trivia.crossdaily.com">Bible Trivia</a><br>
 &nbsp;<a href="http://trivia.crossdaily.com">Millionaire Game</a><br>
-<a href="http://graphics.crossdaily.com"><b>Graphics</b></a><br>
-&nbsp;<a href="http://photography.crossdaily.com">Photography</a><br>
-&nbsp;<a href="http://clipart.crossdaily.com">Clipart</a><br>
-&nbsp;<a href="http://wallpaper.crossdaily.com">Wallpaper</a><br>
-&nbsp;<a href="http://jrbell.crossdaily.com">Art Gallery</a><br>
-&nbsp;<a href="http://cartoons.crossdaily.com">Cartoons</a><br>
-&nbsp;<a href="http://photos.crossdaily.com">Friend Photos</a><br>
-<a href="http://opinion.crossdaily.com"><b>Divided Opinion</b></a> <font color="#FF0000">New</font><br>
+<a href="http://cards.crossdaily.com"><b>Free Greeting E-cards</b></a><br>
+<a href="http://inspirations.crossdaily.com"><b>Inspirations</b></a><br>
+<a href="http://opinion.crossdaily.com"><b>Divided Opinion</b></a><br>
 <a href="http://chat.crossdaily.com"><b>Chat</b></a><br>
 <a href="http://bible.crossdaily.com"><b>Bible Search</b></a><br>
 <a href="http://awesome.crossdaily.com"><b>Web Directory</b></a><br>
@@ -56,14 +55,14 @@ Sponsors:  <a href="http://www.christianclick.com/ads/redirect.phtml?bid=312&amp
 <tbody><tr>
 <td align="LEFT" valign="TOP">
 <font size="-1">
-<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.christiancafe.com/index.php3?id=1513&amp;adid=112&amp;adlocid=3" target="New">Single? Looking?</a></font></td></tr>
+<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.christiancafe.com/?id=2310&amp;adid=112&amp;adlocid=3" target="New">Single? Seeking?</a></font></td></tr>
 <tr><td align="LEFT" valign="TOP">
 <font size="-1">
 <a href="http://www.crossdaily.com/adtrack.php3?url=http%3A%2F%2Fwww.christianet.com%2Fcgi-bin%2Fclickcounter.cgi%3Fclient%3Dfromcrossdaily%26url%3Dhttp%3A%2F%2Fwww.christianet.com%2Fchristianecards%2Findex.htm&amp;adid=143&amp;adlocid=3" target="New">Free Christian E-cards</a></font></td></tr>
-<tr><td align="LEFT" valign="TOP"><font size="-1"><a href="http://www.christianclick.com/ads/redirect.phtml?bid=193&amp;cid=168&amp;hid=42&amp;pid=1" target="New">Free Christian Book</a></font></td></tr><tr><td align="LEFT" valign="TOP"><font size="-1"><a href="http://www.christianclick.com/ads/redirect.phtml?bid=331&amp;cid=167&amp;hid=42&amp;pid=1" target="New">Save The Children</a></font></td></tr><tr><td align="LEFT" valign="TOP"><font size="-1"><a href="http://www.christianclick.com/ads/redirect.phtml?bid=274&amp;cid=169&amp;hid=42&amp;pid=1" target="New">Palm OS Bible</a></font></td></tr><tr><td align="LEFT" valign="TOP"><font size="-1"><a href="http://www.christianclick.com/ads/redirect.phtml?bid=275&amp;cid=169&amp;hid=42&amp;pid=1" target="New">Windows CE Bible</a></font></td></tr><tr><td align="LEFT" valign="TOP"><font size="-1"><a href="http://www.christianclick.com/ads/redirect.phtml?bid=295&amp;cid=169&amp;hid=42&amp;pid=1" target="New">Pocket PC Bible</a></font></td></tr><tr><td align="LEFT" valign="TOP"><font size="-1"><a href="http://www.christianclick.com/ads/redirect.phtml?bid=324&amp;cid=170&amp;hid=42&amp;pid=1" target="New">Free Christian E-book</a></font></td></tr><tr>
+<tr><td align="LEFT" valign="TOP"><font size="-1"><a href="http://www.christianclick.com/ads/redirect.phtml?bid=405&amp;cid=201&amp;hid=42&amp;pid=1" target="New">FREE Christian Book</a></font></td></tr><tr><td align="LEFT" valign="TOP"><font size="-1"><a href="http://www.christianclick.com/ads/redirect.phtml?bid=324&amp;cid=215&amp;hid=42&amp;pid=1" target="New">Free Christian E-book</a></font></td></tr><tr>
 <td align="LEFT" valign="TOP">
 <font size="-1">
-<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.christiancafe.com/index.php3?id=2050&amp;adid=112&amp;adlocid=3" target="New">Looking for Love?</a></font></td></tr>
+<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.christiancafe.com/?id=2311&amp;adid=112&amp;adlocid=3" target="New">Single? FREE Trial!</a></font></td></tr>
 </tbody></table>
 </td></tr></tbody></table>
 
@@ -79,11 +78,7 @@ Free Newsletter</font></td>
 <input type="hidden" name="tcw" value="yes">
 <input type="text" name="email" value="your email" size="10"><br>
 <input type="submit" value="Subscribe"></form></td></tr></tbody></table>
-<small><a href="http://www.crossdaily.com/adtrack.php3?url=http://www.botcw.com&amp;adid=101&amp;adlocid=3" target="New"><b>BOTCW &amp; SurfGuard</b></a><br>
-<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.surfguard.com&amp;adid=102&amp;adlocid=3" target="New">Filtered Net Access</a><br>
-<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.botcw.com&amp;adid=103&amp;adlocid=3" target="New">Best Christian Sites</a><br>
-<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.Christian-ibd.com&amp;adid=104&amp;adlocid=3" target="New">Christian Businesses</a><br>
-</small></td>
+</td>
 <td bgcolor="#000000" width="1"><img src="http://img.crossdaily.com/dot.gif" width="1" height="1"></td>
 <td width="100%" valign="top">
 <center>
@@ -129,7 +124,7 @@ comment@crossdaily.com <b><o:p></o:p></b></p>
 
 <p style="text-align:justify"><b>Participating in Chats and Friendship Site</b></p>
 
-<p style="text-align:justify">To participate in an online chat, Friendship
+<p style="text-align:justify">To participate in an online chat, inspirations, e-cards,Friendship
 directory, or sending e-mail to the Site, we will request a full name, city,
 state, province or country, and e-mail address which will only be used to
 acknowledge receipt of the message or to respond to the sender's request when
@@ -153,10 +148,10 @@ which is brought to the Operators attention.</p>
 <p>In the course of using our site, we automatically track certain information
 such as your IP addresses and e-mail addresses. Many sites automatically
 collect this information. If you choose to post messages in our chat room or
-other message areas, we will only display such information about you as you
+other message areas (such as inspirations or e-cards), we will only display such information about you as you
 choose to reveal. <br>
 <br>
-If you send us personal correspondence, such as emails or letters, or if other
+If you send us personal correspondence, such as emails, inspirations, e-cards or letters, or if other
 users or third parties send us correspondence about your activities or postings
 on the site, we may collect such information into a file which is only accessed
 by authorized personnel. We may also collect other users' comments about you in
@@ -186,7 +181,7 @@ constraints and the backup of our computer system. </p>
 <p style="text-align:justify"><b>Security Policies</b> </p>
 
 <p style="text-align:justify">Please keep in mind that whatever you publicly
-disclose online - for example in a chat or through e-mail - can be collected
+disclose online - for example in a chat, e-card, inspiration or through e-mail - can be collected
 and used by others or unlawfully intercepted by third parties. No data
 transmission over the Internet can be guaranteed to be 100% secure. While we
 strive to protect your personal information, the Operators cannot warrant the
@@ -263,23 +258,27 @@ accept those changes. </p>
 </td></tr></tbody></table>
 <center>
 <hr width="90%" size="0">
+<font face="Arial"><font color="#FF0000">New</font> <a href="http://recommend.crossdaily.com/index.php?url=http://info.crossdaily.com/privacy.php3"><b>Recommend this Page to Your Friends</b></a></font>
+<hr width="90%" size="0">
 <font size="-1" face="Arial">
-<a href="http://trivia.crossdaily.com/"><b>Saintly Millionaire</b></a> - the Web's most enjoyable way to learn the Bible<br>
+<a href="http://graphics.crossdaily.com/"><b>Christian Graphics</b></a> - Over 6,500 Christian images to choose from <font color="#FF0000">New</font><br>
 <a href="http://friendship.crossdaily.com"><b>Christian Friendship</b></a> - Meet 40,000+ Single &amp; Married Friends with <a href="http://photos.crossdaily.com"><b> 11,000+ Photos!</b></a><br>
 <a href="http://cards.crossdaily.com"><b>Free E-Cards</b></a> | <a href="http://photos.crossdaily.com"><b>Photos</b></a> | <a href="http://trivia.crossdaily.com"><b>Bible Trivia</b></a> | <a href="http://graphics.crossdaily.com"><b>Free Graphics</b></a> | <a href="http://shopping.crossdaily.com"><b>Shopping</b></a>
 </font><p>
 <table border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
 <tbody><tr><td colspan="2" width="468" bgcolor="#99CCFF">&nbsp;<b>SPONSORED LINKS</b></td></tr>
-<tr><td align="right" width="80" valign="TOP"><font size="-1">Books</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=325&amp;cid=168&amp;hid=30&amp;pid=1" target="New"><b>4 book for only 99¢</b> plus one for free!</a></td></tr>
-<tr><td align="right" width="80" valign="TOP"><font size="-1">Freebies</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=118&amp;cid=168&amp;hid=30&amp;pid=1" target="New"><b> Free <i>Desecration</i> or <i>Prayer of Jabez</i> book</b></a></td></tr>
-<tr><td align="right" width="80" valign="TOP"><font size="-1">Children</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=329&amp;cid=167&amp;hid=30&amp;pid=1" target="New"><b>Become a Child Sponsor Today</b> ... Click Here</a></td></tr>
-<tr><td align="right" width="80" valign="TOP"><font size="-1">Software</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=101&amp;cid=169&amp;hid=30&amp;pid=1" target="New">The <b>Bible</b> for your <b>palmtop computer</b></a></td></tr>
-<tr><td align="right" width="80" valign="TOP"><font size="-1">Hosting</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=46&amp;cid=160&amp;hid=30&amp;pid=1" target="New">ChristianWebHost - 50MB space for as low as <b>$8.95/month</b></a></td></tr>
-<tr><td align="right" width="80" valign="TOP"><font size="-1">Books</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=308&amp;cid=170&amp;hid=30&amp;pid=1" target="New"><b>Free Ebooks and Printed Books</b> by Paul C. Jong</a></td></tr>
-<tr><td align="right" width="80" valign="TOP"><font size="-1">Life Insurance</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=297&amp;cid=171&amp;hid=30&amp;pid=1" target="New">Instant quotes from America's top life insurance companies</a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">A Free Book</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=401&amp;cid=201&amp;hid=30&amp;pid=1" target="New">Get a <b>FREE Christian Book.</b> Click for Details.</a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">Investing</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=367&amp;cid=188&amp;hid=30&amp;pid=1" target="New">Learn how to invest your money wisely</a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">Software</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=101&amp;cid=205&amp;hid=30&amp;pid=1" target="New">The <b>Bible</b> for your <b>palmtop computer</b></a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">Children</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=362&amp;cid=213&amp;hid=30&amp;pid=1" target="New"><b>Make a difference</b> in the life of a needy child</a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">Hosting</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=46&amp;cid=204&amp;hid=30&amp;pid=1" target="New">ChristianWebHost - 50MB space for as low as <b>$8.95/month</b></a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">Books</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=308&amp;cid=215&amp;hid=30&amp;pid=1" target="New"><b>Free Ebooks and Printed Books</b> by Paul C. Jong</a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">Safe ISP</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=370&amp;cid=212&amp;hid=30&amp;pid=1" target="New">Protect Your Family <b>Child safe Internet Access</b> - $21.95/mos</a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">Business</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=416&amp;cid=214&amp;hid=30&amp;pid=1" target="New"><b> Work From Home</b> The Ulitmate Way to Work From Home</a></td></tr>
+<tr><td align="right" width="80" valign="TOP"><font size="-1">Video Chat</font></td><td align="LEFT" width="400" valign="TOP">&nbsp; <a href="http://www.christianclick.com/ads/redirect.phtml?bid=412&amp;cid=207&amp;hid=30&amp;pid=1" target="New"><b>Got a web cam?</b> Christian Video Chat for $9.95/month</a></td></tr>
 <tr><td align="right" width="80" valign="TOP"><font size="-1">Singles</font></td>
 <td align="LEFT" width="400" valign="TOP">&nbsp;
-<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.christiancafe.com/index.php3?id=1512&amp;adid=113&amp;adlocid=3" target="New">ChristianCafe.com - FREE trial: Meet 1000's of SINGLES!</a></td></tr>
+<a href="http://www.crossdaily.com/adtrack.php3?url=http://www.christiancafe.com/?id=2312&amp;adid=113&amp;adlocid=3" target="New">ChristianCafe.com - Meet 1000's of SINGLES! FREE trial!</a></td></tr>
 <tr><td align="right" width="80" valign="TOP"><font size="-1">E-Cards</font></td>
 <td align="LEFT" width="400" valign="TOP">&nbsp;
 <a href="http://www.crossdaily.com/adtrack.php3?url=http%3A%2F%2Fwww.christianet.com%2Fcgi-bin%2Fclickcounter.cgi%3Fclient%3Dfromcrossdaily%26url%3Dhttp%3A%2F%2Fwww.christianet.com%2Fchristianecards%2Findex.htm&amp;adid=144&amp;adlocid=3" target="New"><b>Free Christian E-Cards</b> for All Occasions</a></td></tr>
@@ -302,12 +301,11 @@ accept those changes. </p>
 <a href="http://games.crossdaily.com"><b>Games</b></a>
 </small></td></tr>
 <tr><td align="right" valign="top" nowrap=""><small><a href="http://graphics.crossdaily.com"><b>Graphics</b></a></small></td><td></td><td valign="top" colspan="2"><small>
-<a href="http://photos.crossdaily.com"><b>Photos</b></a> -
+<a href="http://clipart.crossdaily.com"><b>Clipart</b></a> -
+<a href="http://photography.crossdaily.com">Photography</a> -
 <a href="http://wallpaper.crossdaily.com"><b>Wallpapers</b></a> -
 <a href="http://cartoons.crossdaily.com">Cartoons</a> -
-<a href="http://jrbell.crossdaily.com">Art Gallery</a> -
-<a href="http://clipart.crossdaily.com"><b>Clipart</b></a> -
-<a href="http://photography.crossdaily.com">Photography</a>
+<a href="http://photos.crossdaily.com"><b>Photos</b></a>
 </small></td></tr><tr><td align="right" valign="top" nowrap=""><small><a href="http://shopping.crossdaily.com"><b>Shopping</b></a></small></td><td></td><td valign="top" colspan="2"><small>
 <a href="http://shopping.crossdaily.com/#books"><b>Books</b></a> -
 <a href="http://shopping.crossdaily.com/#flowers">Flowers</a> -
@@ -341,7 +339,7 @@ accept those changes. </p>
 <a href="http://info.crossdaily.com/privacy.php3">Privacy Policy</a> -
 <a href="http://info.crossdaily.com/comment.php3">Contact Us</a>
 <hr width="90%" size="0">
-Copyright © 1996-2001 <a href="http://www.christianadvertising.com">ChristianAdvertising.com</a>, All rights reserved.
+Copyright © 1996-2002 <a href="http://www.christianadvertising.com">ChristianAdvertising.com</a>, All rights reserved.
 
 </center>
 
