findit-quick.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 2446,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.22,
  "homepage_snapshot_redirected_domain": "findit-quick.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020527094500id_/http://findit-quick.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020527094500id_/http%3A//findit-quick.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "findit-quick.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604062438id_/http%3A//findit-quick.com/privacy.html",
  "policy_title": "Findit-Quick.com - Your Quick Search Solution.. Search here today",
  "policy_url": "findit-quick.com/privacy.html",
  "sha1": "6ac8ffbd18be35b444ce14b171dca35912851af6",
  "simhash": 12401612716755788451,
  "simhash_updated": true,
  "site_hostname": "findit-quick.com",
  "site_url": "http://findit-quick.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020604062438",
  "word_count": 385,
  "year": 2002
}

--- a/f/fi/fin/findit-quick.com.html
+++ b/f/fi/fin/findit-quick.com.html
@@ -1,18 +1,66 @@
-<!--The following is the downloaded HTML source of the findit-quick.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217163234id_/http%3A//findit-quick.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the findit-quick.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604062438id_/http%3A//findit-quick.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-
-<title>Findit-Quick.com - Your Best Search Solutions.. Privacy Statement</title>
+<meta name="description" content="Search Findit-Quick.com and find what your looking for " quick"="">
+<meta name="keywords" content="search,searchengines,search engine,internet search engine,marketing,marketing strategy,online advertising,internet advertising,internet marketing,advertising,best searchengine,website promotion,promotion,search engine placement,search engine ranking,web advertising,web site promotion,online marketing,findit,findit quick,submissions,searchengine submissions,free,pay per click,site promotion,target marketing,web marketing,web promotion,">
+<title>Findit-Quick.com - Your Quick Search Solution.. Search here today</title>
+<script language="JavaScript">
+<!--
+function MM_reloadPage(init) {  //reloads the window if Nav4 resized
+  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
+    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
+  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
+}
+MM_reloadPage(true);
+// -->
+</script>
 </head>
 
 <body bgcolor="#FFFFFF" link="#000000" text="#000000" vlink="#000000">
 
 <table border="0" cellpadding="0" cellspacing="0" width="750" align="center">
  <tbody><tr>
-  <td width="240"><a href="http://www.findit-quick.com"><img border="0" src="http://www.findit-quick.com/templates/logo4.gif" alt="Logo" width="240" height="65"></a></td>
+  <td width="240"><a href="http://www.findit-quick.com"><img border="0" src="/templates/logo4.gif" alt="Logo" width="240" height="65"></a></td>
   <td width="20"></td>
-  <td width="490"></td>
+  <td width="490"><script language="JavaScript">
+
+   <!-- Hide the script from old browsers --
+
+   // CHANGE THESE 3 Variables for yourself
+
+      var click = "http://www.findit-quick.com/cgi-local/search/click.cgi";
+      var bms = "http://www.findit-quick.com/cgi-local/search/bms.cgi";
+      var bm = "http://www.findit-quick.com/cgi-local/search/bm.cgi";
+
+   // LEAVE THE REST ALONE
+
+
+   var axel = Math.random() + ""
+   var rand1 = axel.charAt(5)
+   var rand2 = (axel.charAt(6) == "0") ? "1" : axel.charAt(6)
+   var random = rand1 + rand2 + ""
+   var bN = navigator.appName; 
+   var bV = parseInt(navigator.appVersion); 
+   var agt = navigator.userAgent.toLowerCase(); 
+
+
+   if (bN=='Netscape') { 
+       var banner = '<a href="' + click + '?x-factor=' + random + '">' + 
+           '<img src="' + bms + '?x-factor=' + random + '" border=0></a>';
+   }
+
+   if (bN=='Microsoft Internet Explorer') {
+       var banner = '<ifr'+'ame id=IBG src="' + bm + '" width=468 height=73' + 
+           'marginwidth=0 marginheight=0 hspace=0 vspace=0 ' + 
+           'frameborder=0 scrolling=no></ifr'+'ame>'; 
+   }
+
+   document.write(banner);
+
+   //--End Hiding Here -->
+
+</script><a href="http://www.findit-quick.com/cgi-local/search/click.cgi?x-factor=85"><img src="http://www.findit-quick.com/cgi-local/search/bms.cgi?x-factor=85" border="0"></a></td>
  </tr>
 </tbody></table>
 <table border="0" cellpadding="0" cellspacing="0" width="750" align="center">
@@ -23,10 +71,15 @@
 </tbody></table>
 <table border="0" cellpadding="0" cellspacing="0" width="750" align="center">
  <tbody><tr>
-  <td width="96"><a href="http://www.findit-quick.com/cgi-local/search/hyperseek.fcgi?search=howmuch&amp;Terms=casinos"><img border="0" src="http://www.findit-quick.com/templates/pictures/topleft2.gif" alt="Web" width="94" height="23"></a></td>
-  <td width="96"><a href="http://www.finditquickonline.com/"><img border="0" src="http://www.findit-quick.com/templates/pictures/topmiddle.gif" alt="Auctions" width="94" height="23"></a></td>
-  <td width="96"><a href="http://www.findit-quick.com/todaysnews.html"><img border="0" src="http://www.findit-quick.com/templates/pictures/topright.gif" alt="News" width="94" height="23"></a></td>
-  <td width="462"></td>
+  <td width="96"><a href="/index.html"><img border="0" src="/templates/pictures/topleft2.gif" alt="Web" width="94" height="23"></a></td>
+  <td width="96"><a href="http://www.finditquickonline.com/"><img border="0" src="/templates/pictures/topmiddle.gif" alt="Shopping" width="94" height="23"></a></td>
+  <td width="96"><a href="/todaysnews.html"><img border="0" src="/templates/pictures/topright.gif" alt="News" width="94" height="23"></a></td>
+  <td width="96"><a href="http://www.findit-quick.com/indexmeta.html"><img border="0" src="/images/meta.gif" alt="Meta Search" width="94" height="23"></a></td>  
+  <td width="96"><a href="http://kids.findit-quick.com"><img border="0" src="/images/kids.gif" alt="Findit-Quick kids" width="94" height="23"></a></td> 
+  <td width="96"><a href="http://www.findit-quick.com/tour.html"><img border="0" src="/pictures/tour.gif" alt="Tour" width="94" height="23"></a></td>
+  <td width="96"><a href="http://www.findit-quick.com/classindex.html"><img border="0" src="/templates/pictures/topauto.gif" alt="Auto" width="94" height="23"></a></td>     
+<td width="462"></td>
+    
  </tr>
 </tbody></table>
 <table border="0" cellpadding="0" cellspacing="0" width="750" align="center">
@@ -45,15 +98,23 @@
    </tr>
    <tr>
     <td width="100%" colspan="2">
-    <form method="POST" action="http://www.findit-quick.com/cgi-local/search/hyperseek.fcgi">
+  <form method="POST" action="/cgi-local/search/search.cgi">
      <table border="0" cellpadding="0" cellspacing="0" width="100%">
       <tbody><tr>
        <td width="100"><font face="Verdana" size="2"><b>Search For:<font color="#6699FF">-</font></b></font></td>
-       <td width="350"><font face="Verdana" size="2" color="#6699FF">-<input type="text" name="Terms" style="border-style: solid; border-color: #003399" size="40">-</font></td>
-       <td><input type="image" value="Button" name="searchbutton" src="http://www.findit-quick.com/templates/searchbutton2.gif" border="0" width="59" height="18"></td>
-      </tr>
+       <td width="350"><font face="Verdana" size="2" color="#6699FF">-<input type="text" name="query" style="border-style: solid; border-color: #003399" size="40">-</font></td>
+       <td><input type="image" value="Button" name="searchbutton" src="/templates/searchbutton2.gif" border="0" width="59" height="18">                </td>
+      <td><a href="http://www.findit-quick.com/matchmaker"><img src="/images/personals.gif" width="79" height="27" align="absmiddle" border="0"></a></td></tr>
      </tbody></table>
-    </form>
+<font face="Verdana" size="2"><b>Look in:</b></font>&nbsp;&nbsp;
+<font face="Verdana" size="2" color="#000000">
+<input type="radio" name="site" value="web" checked="">Web
+<input type="radio" name="site" value="business">B2B
+<input type="radio" name="site" value="meta">Meta
+<input type="radio" name="site" value="kids">Kids
+<input type="radio" name="site" value="shopping">Products                 
+<input type="radio" name="site" value="opd">Dmoz </font>    
+</form>
     </td>
    </tr>
    <tr>
@@ -225,7 +286,7 @@ yes">&nbsp; </span>This privacy statement applies only to information collected 
       <table border="0" cellpadding="0" cellspacing="0" width="750" align="center">
        <tbody><tr>
         <td>
-        <p align="center"><font size="1" face="Verdana">Copyright 2000, 2001 by FindIt-Quick.com</font></p></td>
+        <p align="center"><font size="1" face="Verdana">Copyright 2002, 2000, 2001 by FindIt-Quick.com</font></p></td>
        </tr>
       </tbody></table>
       <p align="center"><img border="0" src="http://www.findit-quick.com/templates/pictures/box/leftback.gif" width="9" height="1">
