--- a/s/sl/sli/slickdeals.net.html
+++ b/s/sl/sli/slickdeals.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the slickdeals.net privacy policy that was archived on 2001-04-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010410035720id_/http%3A//slickdeals.net/s/privacy/%3Fsite%3Dslickdeals) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the slickdeals.net privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604063815id_/http%3A//www.slickdeals.net/s/privacy/%3Fsite%3Dslickdeals) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="SHORTCUT ICON" href="http://www.thedailydeals.com/favicon.ico">
@@ -58,7 +58,7 @@ if (bN=='Microsoft Internet Explorer')
   'marginwidth="0" marginheight="0" hspace="0" vspace="0" ' + 
   'frameborder="0" scrolling="no"></ifr'+'ame>'); 
 // --> 
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad7127a.cgi/RETURN-CODE/JS/6407"></script>
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad7127a.cgi/RETURN-CODE/JS/6822"></script>
 <noscript><a href="http://www.burstnet.com/ads/ad7127a-map.cgi" target="_top"> 
 <img src="http://www.burstnet.com/cgi-bin/ads/ad7127a.cgi" 
  width="468" height="60" border="0" alt="Click Here"></a> </noscript> 
@@ -173,7 +173,7 @@ if (bN=='Microsoft Internet Explorer')
           <tr align="right"> 
             <td colspan="3"><font size="-2" face="Arial, Helvetica, sans-serif"><b>Last 
               Update:</b> 
-April 9, 8:54 pm PT </font></td>
+June 3, 11:38 pm PT </font></td>
           </tr>
           <tr>
   </tr></tbody></table>
@@ -192,18 +192,18 @@ April 9, 8:54 pm PT </font></td>
                 <tbody><tr> 
                         
                   <td width="136"> 
-                    <div align="center"><font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/topdeals/?site=slickdeals" class="leftcat">Top 
+                    <div align="center"><font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/topdeals/?" class="leftcat">Top 
                       Deals<br>
-                      </a><a href="/category/apparel/?site=slickdeals" class="leftcat">Apparel</a></font><br>
-                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/books/?site=slickdeals" class="leftcat">Books</a></font><br>
-                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/computers/?site=slickdeals" class="leftcat">Computers</a></font><br>
-                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/electronics/?site=slickdeals" class="leftcat">Electronics</a></font><br>
-                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/gifts/?site=slickdeals" class="leftcat">Gifts</a></font><br>
-                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/health/?site=slickdeals" class="leftcat">Health</a></font><br>
-                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/movies/?site=slickdeals" class="leftcat">Movies</a></font><br>
-                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/music/?site=slickdeals" class="leftcat">Music</a></font><font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/toys/?site=slickdeals" class="leftcat"><br>
+                      </a><a href="/category/apparel/?" class="leftcat">Apparel</a></font><br>
+                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/books/?" class="leftcat">Books</a></font><br>
+                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/computers/?" class="leftcat">Computers</a></font><br>
+                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/electronics/?" class="leftcat">Electronics</a></font><br>
+                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/gifts/?" class="leftcat">Gifts</a></font><br>
+                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/health/?" class="leftcat">Health</a></font><br>
+                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/movies/?" class="leftcat">Movies</a></font><br>
+                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/music/?" class="leftcat">Music</a></font><font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/toys/?" class="leftcat"><br>
                             Toys</a></font><br>
-                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/other/?site=slickdeals" class="leftcat">Others</a></font> 
+                      <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/other/?" class="leftcat">Others</a></font> 
                     </div>
                         </td>
                       </tr>
@@ -227,15 +227,15 @@ April 9, 8:54 pm PT </font></td>
               <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#999999">
                       <tbody><tr align="center"> 
                         
-                  <td><font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/a-c/?site=slickdeals" class="leftcat"># 
+                  <td><font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/a-c/?" class="leftcat"># 
                     &amp; A - C</a></font><br>
-                    <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/d-g/?site=slickdeals" class="leftcat">D 
+                    <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/d-g/?" class="leftcat">D 
                     - G</a></font><br>
-                    <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/h-l/?site=slickdeals" class="leftcat">H 
+                    <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/h-l/?" class="leftcat">H 
                     - L</a></font><br>
-                    <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/m-r/?site=slickdeals" class="leftcat">M 
+                    <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/m-r/?" class="leftcat">M 
                     - R</a></font><br>
-                    <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/s-z/?site=slickdeals" class="leftcat">S 
+                    <font face="Arial, Helvetica, sans-serif" size="-1"><a href="/category/s-z/?" class="leftcat">S 
                     - Z</a></font></td>
                       </tr>
                     </tbody></table>
@@ -373,7 +373,7 @@ April 9, 8:54 pm PT </font></td>
                             <input type="hidden" name="Submit" value="1">
                             <input type="TEXT" name="email" size="8">
                             <input name="Submit" type="IMAGE" border="0" src="/images/btn_gotosearch.gif"><br>
-                            <font size="-1" face="Arial, Helvetica, sans-serif"><span class="cattext"><a href="http://www.slickdeals.net/newsletter.php?site=slickdeals">Click 
+                            <font size="-1" face="Arial, Helvetica, sans-serif"><span class="cattext"><a href="http://www.slickdeals.net/newsletter.php?">Click 
                             here</a> to find out about our newsletter.</span></font><br>
                           </td>
                         </tr>
@@ -561,7 +561,7 @@ v+= 'ref=' + escape(window.document.referrer) + '&';
 v+= 'title=' + escape(document.title) + '&';
 v+= '"' + '>' + '<' + '/' + 'SCRIPT' + '>';
 document.write( v);
-</script><script src="http://stats.webtrendslive.com/S003-00-4-22-129311-7349/scripts/wttagv2.cgi?sid=003-00-4-22-129311-7349&amp;siteID=8114&amp;tagver=2&amp;tz=-800&amp;ed=personal&amp;button=10&amp;order=&amp;server=&amp;url=https%3A//web.archive.org/web/20010410035720id_/http%253A//slickdeals.net/s/privacy/%253Fsite%253Dslickdeals&amp;ref=&amp;title=SlickDeals.net%20%5BNew%20Deals%5D%20-%20Today%27s%20Hot%20Deals%21&amp;"></script>
+</script><script src="http://stats.webtrendslive.com/S003-00-4-22-129311-7349/scripts/wttagv2.cgi?sid=003-00-4-22-129311-7349&amp;siteID=8114&amp;tagver=2&amp;tz=-800&amp;ed=personal&amp;button=10&amp;order=&amp;server=&amp;url=https%3A//web.archive.org/web/20020604063815id_/http%253A//www.slickdeals.net/s/privacy/%253Fsite%253Dslickdeals&amp;ref=&amp;title=SlickDeals.net%20%5BNew%20Deals%5D%20-%20Today%27s%20Hot%20Deals%21&amp;"></script>
 
 <noscript>
 <IMG SRC="http://stats.webtrendslive.com/S003-00-4-22-129311-7349/scripts/wttagv2_ns.cgi?uid=003-00-4-22-129311-7349&siteID=8114&tagver=2&tz=-800&ed=personal&button=10&javaOk=No">
