--- a/p/pr/pri/priceless420.com.html
+++ b/p/pr/pri/priceless420.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the priceless420.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218103529id_/http%3A//priceless420.com/Priceless-Privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the priceless420.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604063934id_/http%3A//www.priceless420.com/Priceless-Privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
