motivationalquotes.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 2097,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 8.87,
  "homepage_snapshot_redirected_domain": "motivationalquotes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020330130234id_/http://motivationalquotes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020330130234id_/http%3A//motivationalquotes.com",
  "interval": "2002_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "motivationalquotes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604064111id_/http%3A//motivationalquotes.com/privacy.shtml",
  "policy_title": "Motivational Quotes Privacy Policy",
  "policy_url": "motivationalquotes.com/privacy.shtml",
  "sha1": "863e307fcb3c6bc6a1f7442df92b7c2048fedf54",
  "simhash": 1141226840368719792,
  "simhash_updated": false,
  "site_hostname": "motivationalquotes.com",
  "site_url": "http://motivationalquotes.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020604064111",
  "word_count": 356,
  "year": 2002
}

--- a/m/mo/mot/motivationalquotes.com.html
+++ b/m/mo/mot/motivationalquotes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the motivationalquotes.com privacy policy that was archived on 2001-10-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011021033804id_/http%3A//motivationalquotes.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the motivationalquotes.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604064111id_/http%3A//motivationalquotes.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><link rel="STYLESHEET" type="text/css" href="site.css">
 	<title>Motivational Quotes Privacy Policy</title>
@@ -16,7 +16,7 @@
 		You can find out more about our company and privacy policy on this page.</p>
 		<table>
 		<tbody><tr>
-			<td width="153" bgcolor="#660000"><p style="font-size: small; font-family: gill, arial, helvetica, sans-serif;  color: #99FFCC;">Courage is the thing. All goes if courage goes... J.M. Barrie</p>
+			<td width="153" bgcolor="#660000"><p style="font-size: small; font-family: gill, arial, helvetica, sans-serif;  color: #99FFCC;">You don't have to get it right the first time... Barbara Sher</p>
 			</td>
 			<td align="right"><p align="RIGHT"><a href="http://www.motivationalquotes.com/"><img src="images/logo.gif" width="387" height="63" alt="motivationalquotes.com: Your home for quotes on the web" border="0"></a></p></td>
 		</tr>
@@ -35,6 +35,47 @@
 <script language="JavaScript" src="http://www.ric2.com/cgr.jsp?141406">
 </script>
 <!-- End of Recommend-it Code * Do not modify  --></p>
+<p align="right"></p><form action="http://www.getresponse.com/cgi-bin/add.cgi" method="post" name="">
+<table width="175" border="0" cellpadding="0" cellspacing="0" height="213">
+<tbody><tr> 
+<td colspan="3"> <img src="http://www.motivationalquotes.com/images/01.gif" width="175" height="8" border="0"></td>
+</tr>
+<tr> 
+<td width="7"><img src="http://www.motivationalquotes.com/images/02.gif" width="8" height="84" border="0"></td>
+<td width="161" bgcolor="#9933ff" align="CENTER"> 
+<table border="0" cellspacing="0" cellpadding="0" width="150">
+<tbody><tr> 
+<td><b><font size="1" face="Arial, Helvetica, sans-serif" color="#FFFFFF">First 
+Name </font></b></td>
+<td align="RIGHT"><font size="1" face="Arial, Helvetica, sans-serif"> 
+<input style="FONT-SIZE: 10px" size="10" type="text" name="category2">
+</font></td>
+</tr>
+<tr> 
+<td><b><font size="1" face="Arial, Helvetica, sans-serif" color="#FFFFFF">Email 
+</font></b></td>
+<td align="RIGHT"><font size="1" face="Arial, Helvetica, sans-serif"> 
+<input style="FONT-SIZE: 10px" size="10" type="text" name="category3">
+</font></td>
+</tr>
+<tr> 
+<td>&nbsp;</td>
+<td align="RIGHT"><font size="1" face="Arial, Helvetica, sans-serif"> 
+<input style="FONT-SIZE: 10px" type="submit" value="Enter" name="Enter">
+</font></td>
+</tr>
+</tbody></table>
+</td>
+<td width="7" align="RIGHT" bgcolor="#9933FF"><img src="http://www.motivationalquotes.com/images/03.gif" width="7" height="84" border="0"></td>
+</tr>
+<tr> 
+<td colspan="3" height="100"> <img src="http://www.motivationalquotes.com/images/04.gif" width="175" height="131"></td>
+</tr>
+</tbody></table>
+<input type="hidden" name="category1" value="weeklytip">
+<input type="hidden" name="confirmation" value="http://www.pushbuttonletters.com/emailthanks2.html">
+<input type="hidden" name="misc" value="177861">
+</form><p></p>
 <p>	</p><form action="http://www.motivationalquotes.com/cgi-bin/db/db.cgi" method="GET">
 <input type="hidden" name="uid" value="default">
 <input type="hidden" name="view_records" value="1">
