--- a/h/hi/hig/highcountrygardens.com.html
+++ b/h/hi/hig/highcountrygardens.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the highcountrygardens.com privacy policy that was archived on 2001-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011215095026id_/http%3A//www.highcountrygardens.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the highcountrygardens.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604064113id_/http%3A//www.highcountrygardens.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><!--Created by Sotkin Web Services	 joan@sotkin.com--><head>
 	<title>Gardening: Water conserving plants for Western gardens: High Country Gardens</title>
@@ -9,16 +9,15 @@
 </head>
 
 <body bgcolor="#FFFFFF" link="#990000" vlink="#336600" alink="#FF0000">
-
-<table width="591" border="0">
-  <tbody><tr> 
-    <td width="591" valign="top" colspan="2"> <a href="index.html"><img src="gifs/hd_home_nu.jpg" width="586" height="60" border="0"></a><br>
-      <img src="gifs/space.gif" height="6" width="591" border="0"><br>
-      <a href="articles/index.html"><img src="gifs/space.gif" width="17" height="21" border="0"></a><a href="shop/"><img src="gifs/bt_onlinecat.gif" width="83" height="21" border="0"></a><img src="gifs/space.gif" width="12" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="12" height="21" border="0"><a href="articles/index.html"><img src="gifs/bt_tips.gif" width="65" height="21" border="0"></a><img src="gifs/space.gif" width="15" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="12" height="21" border="0"><a href="cat_req.html"><img src="gifs/bt_request.gif" width="98" height="21" border="0"></a><img src="gifs/space.gif" width="15" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="11" height="21" border="0"><a href="about.html"><img src="gifs/bt_about.gif" width="52" height="21" border="0"></a><img src="gifs/space.gif" width="15" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="11" height="21" border="0"><a href="nl/index.html"><img src="gifs/bt_ezine.gif" width="62" height="21" border="0"></a><img src="gifs/space.gif" width="15" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="11" height="21" border="0"><a href="index.html"><img src="gifs/bt_homenu.gif" width="36" height="21" border="0"></a></td>
+<table width="600" border="0" cellspacing="0" cellpadding="0" align="center">
+  <tbody><tr>
+    <td width="591" valign="top" colspan="2"> <a href="/index.html"><img src="gifs/hd_home_nu.jpg" width="586" height="60" border="0" alt="High Country Gardens: drought tolerant, xeriscape plants and gardening supplies"></a><br>
+      <img src="gifs/space.gif" height="6" width="600" border="0"><br>
+      <a href="../shop/"><img src="gifs/bt_onlinecat.gif" width="83" height="21" border="0" alt="Our online gardening catalog"></a><img src="gifs/space.gif" width="6" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="6" height="21" border="0"><a href="../articles/index.html"><img src="gifs/bt_tips.gif" width="65" height="21" border="0" alt="Gardening Tips articles"></a><img src="gifs/space.gif" width="6" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="6" height="21" border="0"><a href="../cat_req.html"><img src="gifs/bt_request.gif" width="98" height="21" border="0" alt="Request a xeriscape gardening catalog"></a><img src="gifs/space.gif" width="6" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="5" height="21" border="0"><a href="../about.html"><img src="gifs/bt_about.gif" width="52" height="21" border="0" alt="About High Country Gardens"></a><img src="gifs/space.gif" width="6" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="5" height="21" border="0"><a href="../nl/index.html"><img src="gifs/bt_ezine.gif" width="62" height="21" border="0" alt="Free Gardening Newsletter/E-Zine"></a><img src="gifs/space.gif" width="6" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="6" height="21" border="0"><a href="../index.html"><img src="gifs/bt_homenu.gif" width="36" height="21" border="0" alt="High Country Gardens home page"></a><img src="gifs/space.gif" width="6" height="21" border="0"><img src="gifs/bt_divider.gif" width="7" height="21" border="0"><img src="gifs/space.gif" width="5" height="21" border="0"><a href="shop/cart.html"><img src="shop/images/viewcart.gif" width="54" height="21" border="0" alt="High Country Gardens home page"><img src="gifs/space.gif" width="6" height="21" border="0"><img src="shop/images/cart_r.gif" width="19" height="17" border="0" alt="High Country Gardens home page"></a><img src="gifs/space.gif" width="6" height="21" border="0"></td>
   </tr>
 </tbody></table>
 <img src="gifs/space.gif" height="16" width="2" border="0">
-<table width="600" border="0" cellpadding="0" cellspacing="0" hspace="0" vspace="0">
+<table width="600" border="0" cellpadding="0" cellspacing="0" hspace="0" vspace="0" align="center">
   <tbody><tr> 
     <td width="115" valign="top"> 
       <table border="1" width="115" cellpadding="3" cellspacing="0" hspace="0" vspace="0" bgcolor="#FFFFCC">
@@ -154,15 +153,16 @@
 <table width="600" align="CENTER" border="0">
 <tbody><tr>
 <td width="200" align="CENTER" valign="MIDDLE"><font size="-1" face="Arial, Helvetica"><b>Member: </b></font><br>
-        <a href="http://www.mailordergardening.com"><img src="../gifs/MOGA.gif" width="86" height="37" alt="Member Mailorder Gardening Association" border="0"></a> 
+        <a href="http://www.mailordergardening.com"><img src="/gifs/MOGA.gif" width="86" height="37" alt="Member Mailorder Gardening Association" border="0"></a> 
       </td>
-      <td width="200" align="CENTER" valign="MIDDLE"> <a href="https://digitalid.verisign.com/as2/0040e8dff77af7cf7da647ca7e49985e"><img src="../gifs/verisign.gif" width="96" height="60" alt="Verisign Encrypted Order Protection" border="0"></a> 
+      <td width="200" align="CENTER" valign="MIDDLE"> <a href="https://digitalid.verisign.com/as2/a9d0a9d8aa82546272ea4603d38b434e"><img src="/gifs/verisign.gif" width="96" height="60" alt="Verisign Encrypted Order Protection" border="0"></a> 
       </td>
-      <td width="200" align="CENTER" valign="MIDDLE"><!-- Begin BizRate Medal HTML --> <a href="http://www.bizrate.com/merchant/reports/index.xpml?mid=24150" target="bizrate.com"><img src="../gifs/products/bizrate_102x45.gif" alt="BizRate Customer
+      <td width="200" align="CENTER" valign="MIDDLE"><!-- Begin BizRate Medal HTML --> 
+        <a href="http://www.bizrate.com/merchant/reports/index.xpml?mid=24150" target="bizrate.com"><img src="/gifs/products/bizrate_102x45.gif" alt="BizRate Customer
 Certified (GOLD) Site" width="102" height="45" align="top" border="0" target="_blank"></a> <!-- End BizRate Medal HTML --> </td>
 </tr>
 </tbody></table>
-  <p><font size="-2" face="Arial, Helvetica"> Copyright © 1998 - 2001<br>
+  <p><font size="-2" face="Arial, Helvetica"> Copyright © 1998 - 2002<br>
 Santa Fe Greenhouses, Inc  DBA<br>
 High Country Gardens<br>
 2902 Rufina Street<br>
@@ -171,7 +171,7 @@ High Country Gardens<br>
 Fax: 1-800-925-0097<br>
 <a href="mailto:plants@highcountrygardens.com">plants@highcountrygardens.com</a><br>
 http://highcountrygardens.com<br>
-<img src="../gifs/space.gif" width="2" height="6" border="0"><br>
+<img src="/gifs/space.gif" width="2" height="6" border="0"><br>
     <a href="/sitedesigninfo.html">Site design Information</a> </font> 
 </p></center>
 
