onelook.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 1965,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.31,
  "homepage_snapshot_redirected_domain": "onelook.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020326010342id_/http://onelook.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020326010342id_/http%3A//onelook.com",
  "interval": "2002_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "onelook.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604064222id_/http%3A//onelook.com/privacy.shtml",
  "policy_title": "OneLook\u00ae Privacy Policies",
  "policy_url": "onelook.com/privacy.shtml",
  "sha1": "d6f5c7c10fe7e2ceca4c3a917678830bac30019b",
  "simhash": 6567846744601218906,
  "simhash_updated": false,
  "site_hostname": "onelook.com",
  "site_url": "http://onelook.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020604064222",
  "word_count": 275,
  "year": 2002
}

--- a/o/on/one/onelook.com.html
+++ b/o/on/one/onelook.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the onelook.com privacy policy that was archived on 2001-03-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010330204327id_/http%3A//www.onelook.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the onelook.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604064222id_/http%3A//onelook.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>OneLook® Privacy Policies
@@ -63,11 +63,7 @@ email address or telephone number) about your visits to this and other
 Web sites in order to provide advertisements about goods and services
 of interest to you.
 </p><ul>
-<li>To find out more about how Flycast manages the privacy of
-  information in conjunction with serving ads on this site, please go to
-  <a href="http://www.flycast.com/about_us/about-privacy.html">
-  http://www.flycast.com/about_us/about-privacy.html</a>.
-</li><li>Sonar Advertising:<br>
+<li>Sonar Advertising:<br>
   We use third-party advertising companies to serve ads when
   you visit our Web site. Our third-party advertising company also
   separately places or recognizes a cookie file on your browser in the
@@ -79,8 +75,7 @@ of interest to you.
   not having this information used by these companies, please click here.
   <a href="http://www.sonar.com/content/privacy.htm">
   http://www.sonar.com/content/privacy.htm</a>
-  </li></ul>
-  <br>
+</li></ul>
 <p></p>
 
 
