--- a/b/by/byt/bythom.com.html
+++ b/b/by/byt/bythom.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bythom.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205101013id_/http%3A//www.bythom.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bythom.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604073553id_/http%3A//bythom.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>bythom.com Privacy Policy</title>
