nwsource.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "newsandmedia",
  "char_count": 1585,
  "classifier_probability": 0.75,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.39,
  "homepage_snapshot_redirected_domain": "nwsource.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020328194032id_/http://www.nwsource.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328194032id_/http%3A//nwsource.com",
  "interval": "2002_A",
  "link_text": "Privacy statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "nwsource.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604074756id_/http%3A//www.nwsource.com/helpcenter/privacy.html",
  "policy_title": "The Seattle Times Company: Privacy statement",
  "policy_url": "nwsource.com/helpcenter/privacy.html",
  "sha1": "1796123d79e17db171160a747412aa9c9f1ad8dc",
  "simhash": 11438322423706290780,
  "simhash_updated": true,
  "site_hostname": "nwsource.com",
  "site_url": "http://nwsource.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020604074756",
  "word_count": 253,
  "year": 2002
}

--- a/n/nw/nws/nwsource.com.html
+++ b/n/nw/nws/nwsource.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the nwsource.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201210735id_/http%3A//www.nwsource.com/helpcenter/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nwsource.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604074756id_/http%3A//www.nwsource.com/helpcenter/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
+<html><head>
 <title>The Seattle Times Company: Privacy statement</title>
 <meta name="description" content="seattletimes.com: Northwest news and information from the Seattle Times. Daily local news, sports, arts and entertainment, and classified ads.">
 <meta name="keywords" content="Seattle, Puget Sound, Washington, Northwest, Washington's Largest Newspaper, The Seattle Times, Seattle Times Newspaper, daily news, daily newspaper, newspapers, Washington newspapers, news, weather, today's news, arts, entertainment, comics, datebook, tv, business, business news, northwest 100, northwest news, editorial, opinion, education, martin luther king, mlk, newspapers in education, local schools, Seattle schools, school guide, health, science, health pages, lifestyles, local, local news, lottery, politics, nation, world, israel at 50, Burma, special reports, sports, sports news, basketball, sonics, football, seahawks, baseball, mariners, high school sports, prep sports, snow sports, technology, classifieds, classified ads, automotive, nwautospace.com, northwest auto space, employment, real estate, rentals, jobs, homes, cars, yellow pages, movies, movie listings, movie reviews, films, dining, restaurants, Seattle restaurants, restaurant listings, theater, performing arts, entertainment guide, contact us, search, search archive, news archive.">
@@ -77,52 +77,14 @@
 <td width="599">
 <!-- begin content -->
 
-<font face="arial,helvetica,sans-serif" size="1">Last updated November 2001</font>
+<font face="arial,helvetica,sans-serif" size="1">Last updated January 2002</font>
 <p>
-<font color="#003366" face="arial,helvetica,sans-serif" size="3"><b>The Seattle Times Company privacy statement</b><br></font>
-
+<font color="#003366" face="arial,helvetica,sans-serif" size="3"><b>The Seattle Times Company online privacy statement:<br>
+seattletimes.com, NWsource.com, NWclassifieds.com</b><br></font>
 </p><p>
-The following statement discloses the information gathering and dissemination practices for the Web sites of The Seattle Times Company. This statement applies to The Seattle Times Company's family of Web sites and explains data collection and usage at these sites: seattletimes.com, NWsource.com and NWclassifieds.com.
+<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>Your e-mail address</b></font>
 </p><p>
-<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>Our philosophy</b></font>
-</p><p>
-We will never willfully disclose individually identifiable information about our customers to any third party without first receiving that customer's permission.
-</p><p>
-<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>Collection of personal information</b></font>
-</p><p>
-At some sites, The Seattle Times Company may collect personally identifiable information, such as your name, address, e-mail address and phone number. At other sites, The Seattle Times Company may collect anonymous information such as zip codes and favorites. Information collected at one Seattle Times Company Web site may be shared within The Seattle Times Company family of Web sites.
-</p><p>
-The Seattle Times Company has many relationships with third-party content, service and technology providers. When you use these third-party services offered on our sites, personal information you provide may be collected directly by these third parties in order to deliver the services you have requested.
-</p><p>
-Some information about you is automatically collected via server logs. This information can include your IP address, browser type, domain names, access times and referring URLs. We use this information to administer our Web site, help diagnose problems with our server, and to help identify you as a unique visitor to our site and to gather broad information about your site usage.
-</p><p>
-Information that you disclose about yourself in a public chat room, message board or other public forum will immediately become available to anyone who has access to those public areas. Please remember that any information that is disclosed in these areas becomes public information and you should exercise caution when deciding to disclose your personal information.
-</p><p>
-Our sites contain links to other sites. We are not responsible for the privacy practices or the content of such Web sites and encourage you to read the privacy statements of sites you visit.
-</p><p>
-<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>Use of your personal information</b></font>
-</p><p>
-The Seattle Times Company Web sites collect and use your personal information to operate our Web sites and to deliver the services you have requested. We do not share personal information we may collect, such as names, e-mail addresses, and phone numbers, with third parties, unless we disclose that we are doing so at the time you submit your information. The only information we regularly share with third parties, including our advertisers, is aggregate information about site usage and demographics.
-</p><p>
-The Seattle Times Company has many relationships with third-party content, service and technology providers. When you use these third-party services offered on our sites, personal information you provide may be collected directly by these third parties in order to deliver the services you have requested. We ask these providers to comply with our privacy practices.
-</p><p>
-Additional information specific to individual sites is available by clicking these links:
-</p><p>
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-<tbody><tr align="center">
-<td><a href="#seattletimes" target="_top">seattletimes.com</a></td>
-<td><a href="#nwclassifieds" target="_top">NWclassifieds.com</a></td>
-<td><a href="#nwsource" target="_top">NWsource.com</a></td>
-</tr>
-</tbody></table>
-</p><p>
-<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>Use of cookies</b></font>
-</p><p>
-Our sites use cookies to track how many times an ad is delivered (impressions) and how many times it is clicked (click-throughs).
-</p><p>
-Some of our sites also use cookies to help you personalize our sites. When you register with one of our sites, create favorites lists, or other personalization tasks, cookies store your personal information and help recall your information on subsequent visits.
-</p><p>
-A cookie is a small file that stores information about your personal preferences, either on your computer (client-side cookie) or on the Web site you're visiting (server-side cookie). Your personal information, such as your account information, is stored in a server-side cookie. Your non-personal information, such as your preferences, is stored in a client-side cookie.
+When you subscribe to an e-mail service from The Seattle Times Company online, we will not reveal, rent or otherwise make available your e-mail address to third parties except as necessary to deliver the e-mail service you requested.
 </p><p>
 <font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>Children's guidelines</b></font>
 </p><p>
@@ -135,70 +97,15 @@ Our sites are not intentionally targeted at children under 13, but some educatio
 <p>
 We retain the right, at our discretion, to change any of these policies in the future. Our current procedures will always be disclosed on this page.
 </p><p>
-<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>Contacting The Seattle Times Company</b></font>
+<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>Contacting our Web sites</b></font>
 </p><p>
 If you have any questions about this privacy statement, the practices of our Web sites, or your interactions with these sites, you can contact us at:
 </p><p>
-The Seattle Times Company<br>
+The Seattle Times Company Online<br>
 Attn: Privacy<br>
 133 Minor Ave N<br>
 Seattle, WA 98109<br>
 <a href="mailto:webmaster@seattletimes.com" target="_top">webmaster@seattletimes.com</a><br>
-
-</p><p align="center"><font face="verdana, arial, sans-serif" size="1"><a href="#topofpage" style="text-decoration: none"><img src="/art/ui/up_arrow_gray.gif" width="10" height="10" border="0" hspace="2" alt="Back to top"><b><font color="#555555">Back to top</font></b></a></font></p>
-
-<a name="seattletimes"></a>
-<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>seattletimes.com</b></font>
-<p>
-<b>Registration</b>: Site registration is required to use e-mail services on seattletimes.com. When you establish an account, the registration information you provide is collected and stored by The Seattle Times Company.
-</p><p>
-When you register with seattletimes.com, we ask you for your name, zip code, country, birth date, gender, household income, e-mail address, and which newspaper subscriptions you have. Your contact information is used to contact you when necessary, to verify your identity if you need assistance with your account, and to enhance your personalized experience on our site. Demographic information is used to develop content and to support marketing for The Seattle Times Company.
-</p><p>
-Once you register with seattletimes.com, any contact we may have with you will be at your request. You can update your account information at any time by visiting our registration page. To delete your account, contact <a href="mailto:webmaster@seattletimes.com">webmaster@seattletimes.com</a>.
-</p><p>
-<b>Stocks</b>: When you create a portfolio in our Stock Market section and sign up for e-mail alerts, your e-mail address and zip code are collected by Inlumen, our provider of these services. Your e-mail address is used to contact you when necessary, and your zip code is used to compile aggregate demographics.
-</p><p>
-<b>Forums</b>: When you sign up to participate in our online forums, we collect your name, zip code and e-mail address. Your contact information is used to contact you when necessary, and demographic information is used to develop content and support marketing for The Seattle Times Company.
-</p><p>
-<b>Circulation order form</b>: When you use our home delivery or vacation stop order forms to start or suspend a newspaper subscription, we collect your name, address, phone number, and e-mail address. Contact information is used for billing, to deliver your order, to contact you about your order when necessary, and to notify you about subscriber benefits or promotions we may offer exclusively to our newspaper subscribers.
-</p><p>
-<b>Contests</b>: We run contests on our site in which we ask customers for information to contact them, and personal information that we use to compile aggregate information about site usage and demographics. If contests are sponsored by third parties, some or all of the information collected for a contest may be shared with the sponsor(s) or other companies indicated on the entry form. If your information will be shared, we will disclose that we are doing so at the time you submit your information.
-</p><p>
-<b>Surveys</b>: Our online surveys may ask customers for contact and demographic information. The customer's contact information is used to contact the customer when necessary. Demographic information is used to tailor our customers' experience at our site, showing them content we think they might be interested in, and displaying the content according to their preferences. Survey data is used to develop content and to support marketing for The Seattle Times Company. Unique identifiers may be collected and used to verify a customer's identity.
-
-</p><p align="center"><font face="verdana, arial, sans-serif" size="1"><a href="#topofpage" style="text-decoration: none"><img src="/art/ui/up_arrow_gray.gif" width="10" height="10" border="0" hspace="2" alt="Back to top"><b><font color="#555555">Back to top</font></b></a></font></p>
-
-<a name="nwclassifieds"></a>
-<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>NWclassifieds.com</b></font>
-<p>
-<b>Classifieds order form</b>: When you use our online classified order form, we collect your name, address, phone number, and e-mail address. Contact information is used for billing, to process orders, to contact you about your order when necessary, and occasionally to request your feedback regarding the quality of advertising products and services.
-</p><p>
-<b>Jobs e-mail inquiry form</b>: When you use our jobs e-mail inquiry form to contact potential employers, we collect your name, phone number and resume. Contact and personal information is forwarded to the employer you selected. Compiled aggregate information is used to track site traffic and performance.
-</p><p>
-<b>Autos e-mail inquiry form</b>: When you use our autos e-mail inquiry form to contact sellers, we collect your name, e-mail address and phone number. Contact information is forwarded to the seller you selected. Compiled aggregate information is used to track site traffic and performance.
-
-</p><p align="center"><font face="verdana, arial, sans-serif" size="1"><a href="#topofpage" style="text-decoration: none"><img src="/art/ui/up_arrow_gray.gif" width="10" height="10" border="0" hspace="2" alt="Back to top"><b><font color="#555555">Back to top</font></b></a></font></p>
-
-<a name="nwsource"></a>
-<font face="arial, helvetica, sans-serif" size="2" color="#BB8844"><b>NWsource.com</b></font>
-<p>
-<b>Registration</b>: Site registration is required to use the personalization tools on NWsource.com: My NWsource, E-mail, Calendar, Address Book, and To-Do List. These tools are provided by InfoSpace. When you establish a NWsource account, the registration information you provide is collected and stored by InfoSpace, but we retain control of this information and its dissemination. We will never willfully disclose individually identifiable information about our customers to any third party without first receiving that customer's permission. We may allow InfoSpace to access your information for administrative purposes, such as to send you your password, if you forget it. InfoSpace may not use it in any other way.
-</p><p>
-When you register with NWsource, we ask you for your name, address and zip code, country, time zone, birth date, and e-mail address. Your contact information is used to contact you when necessary, to verify your identity if you need assistance with your account, and to enhance your personalized experience on our site. Demographic information is used to develop content and to support marketing for The Seattle Times Company.
-</p><p>
-Once you register with NWsource, any contact we may have with you will be at your request. In the near future, we plan to offer e-mail notification services which will allow you to receive e-mail from us about new content, services and products. At that time we will invite you, by e-mail, to sign up for these services. We will continue to not let third parties solicit our members.
-</p><p>
-See the NWsource FAQ for information on:
-</p><ul>
-<li>updating or deleting your account information
-</li><li>changing your password
-</li><li>updating or removing information listed in NWsource directories
-</li></ul>
-<b>Message boards</b>: You have the option to provide your name and e-mail address when you sign up to use message boards. If you provide your e-mail address and post messages, others will be able to see your e-mail address and respond to you.
-<p>
-<b>Contests</b>: We run contests on our site in which we ask customers for information to contact them, and personal information that we use to compile aggregate information about site usage and demographics.
-</p><p>
-<b>Surveys</b>: Our online surveys may ask customers for contact and demographic information. The customer's contact information is used to contact the customer when necessary. Demographic information is used to tailor our customers' experience at our site, showing them content we think they might be interested in, and displaying the content according to their preferences. Survey data is used to develop content and to support marketing for The Seattle Times Company. Unique identifiers may be collected and used to verify a customer's identity.
 
 </p><p align="center"><font face="verdana, arial, sans-serif" size="1"><a href="#topofpage" style="text-decoration: none"><img src="/art/ui/up_arrow_gray.gif" width="10" height="10" border="0" hspace="2" alt="Back to top"><b><font color="#555555">Back to top</font></b></a></font></p>
 
